test cases for user service cotroller and services